--- a/source/css/_settings.theme-switcher.scss
+++ b/source/css/_settings.theme-switcher.scss
@@ -86,3 +86,20 @@
     }
   }
 }
+
+
+.c-swatches {
+  &--colors,
+  &--background,
+  &--grid {
+    @include media('<=small') {
+      display: none;
+    }
+  }
+}
+
+.c-swatches--sabbath {
+  @include media('>small') {
+    display: none;
+  }
+}
